# FrameworkV3

Labels/: CMakeLists.txt  Labels.cbp  Makefile  annotationhandler.cpp  annotationhandler.h  cmake_install.cmake  main.cpp
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  features2D.cbp
builds/Labels/: CMakeCache.txt  Labels  Labels.cbp  Makefile  cmake_install.cmake
builds/clustering/: CMakeCache.txt  Makefile  clustering  clustering.cbp  cmake_install.cmake
builds/features2d/: CMakeCache.txt  Makefile  cmake_install.cmake  features2D  features2D.cbp
clustering/: CMakeLists.txt  FindTBB.cmake  Makefile  clustering.cbp  cmake_install.cmake  main.cpp  out.txt  slicsuperpixel.h  superpixel2d.cpp  superpixel2d.h
clustering/Slic/: CMakeCache.txt  CMakeLists.txt  slicsuperpixel.cpp
features2D/: CMakeLists.txt  featuremanager2d.cpp  featuremanager2d.h  main.cpp
